@@ -1,3 +1,10 @@
+2007-01-23  Bruno Haible  <bruno@clisp.org>
+
+	Allow 64-bit builds on MacOS X 10.5.
+	* m4/general.m4 (CL_CANONICAL_HOST_CPU): Test for x86_64 CPU if
+	"uname -m" returns "i386".
+	Reported by Ron Garret <ron@flownet.com>.
+
 2007-01-20  Bruno Haible  <bruno@clisp.org>
 
 	Avoid some gcc warnings.
